bluejay-validator/tests/snapshots/executable_integration_test__error@value_is_valid.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/value_is_valid.graphql
---
Error: No implicit conversion of integer to String
   ╭─[ value_is_valid.graphql:6:28 ]
   │
 6 │   findDog(complex: { name: 123 }) { name }
   │                            ─┬─  
   │                             ╰─── No implicit conversion to String
───╯

Error: No field with name favoriteCookieFlavor on input type ComplexInput
    ╭─[ value_is_valid.graphql:13:22 ]
    │
 13 │   findDog(complex: { favoriteCookieFlavor: "Bacon" }) { name }
    │                      ──────────┬─────────  
    │                                ╰─────────── No field with this name on input type ComplexInput
────╯

Error: Object with multiple entries for field name
    ╭─[ value_is_valid.graphql:1:1 ]
    │
 17 │   findDog(complex: { name: "Fido", name: "Fido" }) { name }
    │                      ──┬─          ──┬─  
    │                        ╰───────────────── Entry for field
    │                                      │   
    │                                      ╰─── Entry for field
────╯

Error: No implicit conversion of enum to Int
    ╭─[ value_is_valid.graphql:22:25 ]
    │
 22 │     intArgField(intArg: SomeEnumValue)
    │                         ──────┬──────  
    │                               ╰──────── No implicit conversion to Int
────╯

Error: No implicit conversion of enum to CustomScalar
    ╭─[ value_is_valid.graphql:27:38 ]
    │
 27 │   customScalarField(customScalarArg: SomeEnumValue)
    │                                      ──────┬──────  
    │                                            ╰──────── No implicit conversion to CustomScalar
────╯

Error: No implicit conversion of string to Int
   ╭─[ value_is_valid.graphql:2:23 ]
   │
 2 │   intArgField(intArg: "123")
   │                       ──┬──  
   │                         ╰──── No implicit conversion to Int
───╯
